# aelo-mining-pool

./: .gitignore  Cargo.toml  README.md
apps/website/: package-lock.json
crates/aleo-api/: Cargo.toml
crates/aleo-client/: Cargo.toml  build.rs
crates/aleo-client/router/: Cargo.toml
crates/aleo-client/router/src/: lib.rs
crates/aleo-client/src/: block_locator.rs  helpers.rs  lib.rs  main.rs  node_interface.rs  node_type.rs  prover.rs  traits.rs  version.rs
crates/aleo-client/src/client/: mod.rs  mod2.rs  mod4.rs  prover.rs  router.rs  rpc.rs  traits.rs
crates/aleo-pool/: Cargo.toml  build.rs
crates/aleo-pool/src/: block_observer.rs  db.rs  lib.rs  main.rs  rpc.rs  service.rs  version.rs
crates/aleo-prover/: Cargo.toml
crates/aleo-prover-cpu/: Cargo.toml
crates/aleo-prover-gpu/: Cargo.toml
crates/aleo-prover/src/: version.rs
crates/aleo-utils/: Cargo.toml
crates/aleo-utils/src/: lib.rs  log.rs  runtime.rs  version.rs
crates/aleo-worker/: Cargo.toml
crates/aleo-worker/src/: lib.rs  main.rs  rpc.rs  version.rs
crates/pool-client/: Cargo.toml
crates/pool-client/src/: lib.rs  main.rs  prover.rs  utils.rs
crates/pool-service/: Cargo.toml  build.rs
crates/pool-service/src/: .prover.rs.swp  db.rs  lib.rs  main.rs  prover.rs  rpc.rs  service.rs
crates/protos/: block.proto  stratum-pool.proto  stratum-worker.proto  stratum.proto  work.proto
crates/stratum/: Cargo.toml  build.rs
crates/stratum-pool/: Cargo.toml  build.rs
crates/stratum-pool/src/: lib.rs
crates/stratum-worker/: Cargo.toml  build.rs
crates/stratum-worker/src/: lib.rs
crates/stratum/src/: lib.rs
crates/tests/: Cargo.toml
crates/tests/src/: main.rs
protos/: block.proto
scripts/: run_dev.sh  test_stratum_service.sh
