# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "crates/aleo-pool",
    "crates/aleo-worker",
    "crates/stratum-pool",
    "crates/stratum-worker",
    "crates/aleo-utils",
    "crates/aleo-client",
]

[workspace.package]
version = "0.0.1"
[workspace.dependencies.snarkvm]
version = "0.9.7"
features = ["circuit", "console", "parallel"]
