[package]
name = "aleo-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "./src/main.rs"


[dependencies]
stratum-pool = { path = "../stratum-pool" }
anyhow = "*"
simple-log = "1.6.0"
redis = "0.22.1"
tonic = "0.8"
prost = "0.11"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
tokio-stream = "0.1"
async-stream = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
rand = "0.8.4"
async-trait = "0.1"
colored = "2.0.0"
time = "0.3.17"
num_cpus = "1.14.0"
rayon = "1"
parking_lot = "0.12.1"
snarkvm = { workspace = true }
snarkos-node = { git = "https://github.com/AleoHQ/snarkOS.git", branch = "testnet3" }
snarkos-node-tcp = { git = "https://github.com/AleoHQ/snarkOS.git", branch = "testnet3" }
snarkos-node-messages = { git = "https://github.com/AleoHQ/snarkOS.git", branch = "testnet3" }
snarkos-account = { git = "https://github.com/AleoHQ/snarkOS.git", branch = "testnet3" }
snarkos-node-router = { git = "https://github.com/AleoHQ/snarkOS.git", branch = "testnet3" }
snarkos-node-store = { git = "https://github.com/AleoHQ/snarkOS.git", branch = "testnet3" }


[build-dependencies]
tonic-build = "0.8"
