[package]
name = "aleo-pool"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pool"
path = "./src/main.rs"

[dependencies]
clap = { version = "4.0.9", features = ["derive"] }
aleo-utils = { path = "../aleo-utils" }
anyhow = "*"
simple-log = "1.6.0"
redis = "0.22.1"
mobc-redis = "0.7.0"
mobc = "0.7.3"
tonic = "0.8.3"
prost = "0.11"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
tokio-stream = "0.1"
async-stream = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.4"
stratum-pool = { path = "../stratum-pool" }
snarkvm = { workspace = true }
snarkos-node = { git = "https://github.com/AleoHQ/snarkOS.git", branch = "testnet3" }

[build-dependencies]
tonic-build = "0.8"
