[package]
name = "aleo-worker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "worker"
path = "./src/main.rs"

[dependencies]
clap = { version = "4.0.9", features = ["derive"] }
anyhow = "*"
simple-log = "1.6.0"
snarkvm = { workspace = true }
stratum-worker = { path = "../stratum-worker" }
stratum-pool = { path = "../stratum-pool" }
tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
aleo-utils = { path = "../aleo-utils" }
tonic = "0.8.3"
lazy_static = "1.4.0"
