[package]
name = "pool-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.9", features = ["derive"] }
redis = "0.22.1"
tonic = "0.8"
prost = "0.11"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
tokio-stream = "0.1"
async-stream = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.4"
stratum = { path = "../stratum" }

[build-dependencies]
tonic-build = "0.8"
