[package]
name = "stratum-pool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8"
prost = "0.11"
futures-core = "0.3"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "*"
async-trait = "0.1.59"

[build-dependencies]
tonic-build = "0.8"
