[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test"
path = "src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snarkvm = { workspace = true }
snarkos-node = { git = "https://github.com/AleoHQ/snarkOS.git", branch = "testnet3" }
tokio = "*"
